refactor(documenttemplates): clean up the template service